@@ -2,10 +2,21 @@ pipeline {
     agent any
 
     tools {
-        maven 'Maven3'   // Must match Global Tool Configuration
+        maven 'Maven3'
+    }
+
+    environment {
+        MAVEN_OPTS = "--add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"
     }
 
     stages {
+
+        stage('Verify Java') {
+            steps {
+                bat 'java -version'
+                bat 'mvn -version'
+            }
+        }
 
         stage('Checkout Code') {
             steps {
@@ -14,13 +25,13 @@ pipeline {
             }
         }
 
-        stage('Clean & Build') {
+        stage('Build') {
             steps {
                 bat 'mvn clean package -DskipTests'
             }
         }
 
-        stage('Run Tests') {
+        stage('Test') {
             steps {
                 bat 'mvn test'
             }
@@ -29,10 +40,10 @@ pipeline {
 
     post {
         success {
-            echo 'Build & Tests Successful'
+            echo 'BUILD SUCCESSFUL'
         }
         failure {
-            echo 'Build or Tests Failed'
+            echo 'BUILD FAILED'
         }
     }
 }
